Rename repo e pulizia url sito

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://FabioTognaa.github.io/Fabio_Tognarelli_WebSite",
+  "homepage": "https://fabiotognaa.github.io/",
   "name": "fabio-tognarelli-website",
   "private": true,
   "version": "0.0.0",
